Tried to implement SMTP

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -19,4 +19,14 @@
         </form>
     </div>
 </section>
+
+{% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+        <div id="flash-messages">
+            {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">{{ message }}</div>
+            {% endfor %}
+        </div>
+    {% endif %}
+{% endwith %}
 {% endblock %}
