Uploaded Final templates

--- a/templates/fundraisers.html
+++ b/templates/fundraisers.html
@@ -30,9 +30,9 @@
             <select name="category" id="category" class="filter-dropdown">
                 <option value="">All Categories</option>
                 {% for cat in categories %}
-                <option value="{{ cat.category }}" {% if request.args.get('category') == cat.category %}selected{% endif %}>
-                    {{ cat.category }}
-                </option>
+                <option value="{{ cat[0] }}" {% if request.args.get('category') == cat[0] %}selected{% endif %}>
+        	    {{ cat[0] }}
+    		</option>
                 {% endfor %}
             </select>
             
