--- a/templates/payment.html
+++ b/templates/payment.html
@@ -130,7 +130,7 @@
                     .then(data => {
                         if (data.status === 'success') {
                             alert('Donation Successful!');
-                            window.location.href = data.redirect;
+                            window.location.href = "{{ url_for('fundraisers', _external=True) }}";
                         } else {
                             alert('Donation Failed. Try again.');
                         }
